src/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  @apply min-h-full;
}

html {
  @apply bg-white dark:bg-zinc-900;
  @apply text-black dark:text-white;
}

body {
  @apply font-mono text-xs;
  @apply p-6;
}

a {
  @apply inline-block px-0.5;
  @apply hover:text-white hover:bg-zinc-900;
  @apply dark:hover:bg-white dark:hover:text-black;
}

